<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_bg"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/game_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/icon"
        android:src="@mipmap/ic_launcher"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/game_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bg_logo_big"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/loading_text"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/loading"
        android:textAllCaps="true"
        android:visibility="invisible"/>

</RelativeLayout>